fix modify station tooltips a bit
player lvl up token and config removed
try fix player vanilla lvls being wrong after teleporting to maps
changed config from common to server so it syncs automatically to clients. 
nerfed crit rate talents
nerfed wand aoe 
talent tree now reminds you which button to click to show more stat info
trait stats now use same keybind to show more info
map device no longer can increase tier or lvl of maps, its now done through currency items in modify station
group maps no longer require standing near the person sacrificing the map, you can now click a button on the map device gui
to sacrifice a map, just right click map device with the map
map isnt used up anymore if there isn't enough space for portals
stations now tick more smoothly
salvaging maps now gives map related currencies or ores only.
added map currencies like +tier +lvl etc
overlay now updates more often to be smoother
map back pearl now teleports back instantly
hud should be back faster now after changing dimensions
adventure map bonus loot is now smaller cus i'm adding loot crate as completition reward
pressing same keybind should now close the gui
map leave pearl no longer shows map stats, thats now in new map info gui
wands and staffs now can have elemental attack dmg even without being unique items
maps have less affixes but they're stronger
added main hub gui if you want to only have 1 keybind!
maps now have a quest and loot crate as a reward!
armor requirements are no longer random (wis or int), now they are always wis and int etc (existing gear will have a change, beware)
enchanted/renamed items no longer get auto put in bags. Should stop some annoyances
configs should now sync to client on login
spell damage renamed to spell power. Should make more sense if nature power increases healing, than nature damage increasing healing
loot now drops based on highest damager. So if you most dmg to mob and it dies to fire, it will still drop loot!