@@ -30,3 +30,4 @@ src/main/resources/assets/mmorpg/textures/items/PAIDASSETS
 src/main/resources/assets/mmorpg/textures/items
 src/main/resources/assets/mmorpg/textures/
 src/main/resources/assets/mmorpg/textures
+src/main/resources/assets/mmorpg/lang/en_us.json
